# python_Meijer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Example_MeijerShoppingList.ipynb  Example_UPC_Lookup.ipynb  Features_ShoppingList-Copy1.ipynb  Features_ShoppingList-Copy2.ipynb  Features_ShoppingList-Copy4.ipynb  Features_ShoppingList.ipynb  GetAllMeijerStores-Copy1.ipynb  GetAllMeijerStores.ipynb  LICENSE  Makefile  Meijer2.ipynb  Meijer2_ClipAllCoupons.ipynb  Meijer2_Flow.ipynb  Meijer2_ShopNScan.ipynb  Meijer2_StoresFuel-Copy1.ipynb  README.md  ShopNScan.ipynb  meijer_stores.json  mitm.ipynb  requirements.txt  shop_n_scan_faker.py
examples/: Example_Meijer_Class_Usage.ipynb  list
meijer/: LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
meijer/meijer/: Meijer.py  MeijerList.py  __init__.py  cli.py  requests.py
meijer/test-reports/: README.md  report.html
meijer/tests/: conftest.py  pytest_meijer2.py  test_0001.py  test_meijer.py  test_meijer2.py  test_meijer_list.py
meijer2/: .coveragerc  .pip-license-ignore  LICENSE  Makefile  README.md  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.py
quarantine/: inventory.py  inventory2.py
v1/: 00_MeijerAppInit.ipynb  01_MeijerLogin-Copy1.ipynb  01_MeijerLogin-Copy2.ipynb  01_MeijerLogin.ipynb  02_MeijerClass.ipynb  05_Misc-Copy1.ipynb  05_Misc.ipynb  Features_ShoppingList-Copy3.ipynb  GetAllMeijerStores-Copy1.ipynb  GetAllMeijerStores.ipynb  Meijer Security Disclosure.ipynb  Meijer2.ipynb  Meijer2_Flow.ipynb  Meijer2_StoresFuel-Copy1.ipynb  Meijer2_StoresFuel.ipynb  (+1 more)
(+13 files in other folders)
