[tool.poetry]
name = "meijer"
version = "0.1.0"
description = "Reverse engineered API for Meijer apps & services."
authors = ["jed <jed@bored>"]

[tool.poetry.dependencies]
python = "<3.8,==3.*,>=3.7.0"
requests = "==2.*,>=2.22.0"
cached-property = "==1.*,>=1.5.0"
click = ">=7.0,<8"

[tool.poetry.dev-dependencies]
pytest = "==3.*,>=3.0.0"

[tool.poetry.scripts]
meijer = "meijer.cli:cli"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.dephell.poetry]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "poetrylock", path = "poetry.lock"}
